# yolov5-study

./: .env  .gitignore  CMakeLists.txt  README.md
datasets/: .gitignore  README.md  data_preprocess.ipynb
src/: build.cu  runtime.cu
src/plugins/: yoloPlugins.cpp  yoloPlugins.h
src/process/: config.h  cuda.h  postprocess.cpp  postprocess.h  preprocess.cu  preprocess.h  types.h
